--- a/templates/dashboard/potential_clients.html
+++ b/templates/dashboard/potential_clients.html
@@ -197,6 +197,7 @@
 			    <form class="form-horizontal" method="post">
                     {% csrf_token %}
                     <input type="text" name="modal-type" value="PotentialClientForm" class="form-control" hidden>
+                    <input type="number" name="user" value="{{ user.id }}"  hidden>
 				    <div class="form-group row">
 				        <label class="col-lg-2 form-control-label">Name:</label>
 				        <div class="col-lg-8">
