--- a/templates/dashboard/505.html
+++ b/templates/dashboard/505.html
@@ -172,7 +172,7 @@
   							<a class="nav-link" href="app.inbox.html">Inbox</a>
   						</li>
   						<li class="nav-item">
-  							<a class="nav-link" href="app.message.html">Message</a>
+  							<a class="nav-link" href="messaging.html">Message</a>
   						</li>
   						<li class="nav-item">
   							<a class="nav-link" href="clients.html">Contacts</a>
