--- a/templates/dashboard/search.html
+++ b/templates/dashboard/search.html
@@ -81,7 +81,7 @@
                 </a>
               </li>
               <li>
-                <a href="app.message.html" class="b-default">
+                <a href="messaging.html" class="b-default">
                   <span class="nav-label">
                     <b class="label label-xs rounded danger"></b>
                   </span>
@@ -474,7 +474,7 @@
             <a class="dropdown-item" href="app.inbox.html">
               <span>Inbox</span>
             </a>
-            <a class="dropdown-item" href="app.message.html">
+            <a class="dropdown-item" href="messaging.html">
               <span>Message</span>
             </a>
             <div class="dropdown-divider"></div>
@@ -575,7 +575,7 @@
                       <a class="dropdown-item" href="app.inbox.html">
                         <span>Inbox</span>
                       </a>
-                      <a class="dropdown-item" href="app.message.html">
+                      <a class="dropdown-item" href="messaging.html">
                         <span>Message</span>
                       </a>
                       <div class="dropdown-divider"></div>
